--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         </div>
         
         <h2 class="d-flex chan-section-label align-items-center fst-italic text-white w-100 m-0" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">Boards:<hr class="border-white w-100 my-0 mx-1" style="height: fit-content; margin-bottom: 1px !important;"></h2>
-        <section class="chan-index-section chan-threads-container overflow-y-auto" style="max-height: 275px;" id="boards">
+        <section class="chan-index-section chan-threads-container overflow-y-auto" style="max-height: 275px; border-color: var(--section-border);" id="boards">
             {% for board_group in board_groups %}
                 <div class="d-flex flex-column" id="{{ board_group.id }}">
                     <h3 class="chan-title text-decoration-underline fst-italic m-0 px-1" style="font-size: 1.1rem; width: fit-content; background-color: rgba(0, 0, 0, 0.25);">{{ board_group.name }}:</h3>
@@ -46,9 +46,6 @@
             <div class="d-flex gap-1 w-100" style="max-width: 800px; margin-top: 0.3rem;">
                 <button class="w-100 chan-admin-button" type="button" data-bs-toggle="modal" data-bs-target="#deleteBoardGroup">- Delete Board Group</button>
                 <button class="w-100 chan-admin-button" type="button" data-bs-toggle="modal" data-bs-target="#deleteBoard">- Delete Board</button>
-            </div>
-            <div class="d-flex gap-1 w-100" style="max-width: 800px; margin-top: 0.3rem;">
-                <button class="w-100 chan-admin-button" type="button" data-bs-toggle="modal" data-bs-target="#manageBans">Manage banned fingerprints</button>
             </div>
 
             <!-- New Board Group Modal -->
@@ -205,7 +202,7 @@
         {% endif %}
 
         <h2 class="d-flex chan-section-label align-items-center fst-italic text-white w-100 m-0 mt-4" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">Popular Threads:<hr class="border-white w-100 my-0 mx-1" style="height: fit-content; margin-bottom: 1px !important;"></h2>
-        <section class="chan-index-section admin-button" id="popular-threads">
+        <section class="chan-index-section admin-button" style="border-color: var(--section-border);" id="popular-threads">
             <div class="chan-threads-container" style="width: fit-content;">
                 {% for board in boards %}
                     
@@ -226,7 +223,7 @@
                             <div class="d-flex flex-column align-items-center chan-thread" style="max-width: 175px; max-height: 275px;">
                                 <a href="{{ url_for('Admin.Board' if api_key else 'Boards.Board', id=ns.most_voted_thread.board.id, **({'api_key': api_key} if api_key else {})) }}" class="chan-title text-decoration-underline fw-bold m-0 py-1" style="font-size: 0.9rem;">{{ board.name }}</a>
                                 <a href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=ns.most_voted_thread.id, **({'api_key': api_key} if api_key else {})) }}" title="{{ ns.most_voted_thread.title }}">
-                                    <img style="max-width: 150px; max-height: 150px; border: 1px solid rgb(66, 212, 144); background: rgba(0, 255, 234, 0.05);" src="{{ url_for('Images.Image', id=ns.most_voted_thread.image.id) }}" alt="">
+                                    <img style="max-width: 150px; max-height: 150px; border: 1px solid var(--chan-color); background: rgba(0, 255, 234, 0.05);" src="{{ url_for('Images.Image', id=ns.most_voted_thread.image.id) }}" alt="">
                                 </a>
                                 <p class="ellipsis-multiline text-white">
                                     {{ ns.most_voted_thread.content }}
@@ -242,7 +239,7 @@
         
 
         <h2 class="d-flex chan-section-label align-items-center text-white w-100 m-0 mt-4" style="max-width: 800px; font-size: 15px; font-family: 'Courier New', Courier, monospace; white-space: nowrap;">Metrics:<hr class="border-white w-100 my-0 mx-1" style="height: fit-content; margin-bottom: 1px !important;"></h2>
-        <section class="chan-index-section p-0 overflow-x-auto" id="statistics">
+        <section class="chan-index-section p-0 overflow-x-auto" style="border-color: var(--section-border);" id="statistics">
             
                 
                 <div class="table-active w-100" style="min-width: 500px;">
