--- a/static/css/index.css
+++ b/static/css/index.css
@@ -25,7 +25,7 @@
     width: 100%;
     max-width: 800px;
     padding: 0.25rem 0.5rem;
-    border: 1px solid white;
+    border: 1px solid;
 }
 
 .chan-threads-container {
