--- a/templates/board.html
+++ b/templates/board.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
     <title>πchan - /{{ board.id }}</title>
 </head>
-<body class="chan-bg vh-100 d-flex flex-column align-items-center">
+<body class="chan-bg vh-100 overflow-x-hidden d-flex flex-column align-items-center">
     
     <nav class="chan-nav d-flex w-100 border-bottom" style="height: fit-content; padding: 0.3rem 0.25rem;">
         <ul class="d-flex gap-2 justify-content-between w-100 list-unstyled m-0" style="height: fit-content; width: max-content; margin-bottom: 1px !important;">
@@ -113,12 +113,13 @@
   
         
         <hr class="border-white w-100 my-0">
-            <div class="d-flex w-100 px-2 overflow-x-auto justify-content-between">
+            <div class="d-flex w-100 px-2 justify-content-between">
                 <form class="sort-by-form" action="#" method="GET">
                     <label class="text-white">Style:</label>
                     <select id="style_id">
                         <option value="board-thread" >πchan</option>
                         <option value="tomorrow" >Tomorrow</option>
+                        <option value="yotsuba_b" >Yotsuba B</option>
                     </select>
                 </form>
                 <link id="theme-style" rel="stylesheet" href="{{ url_for('static', filename='css/board-thread.css') }}">
@@ -248,12 +249,12 @@
             {% endmacro %}
 
         <!-- Rendering Threads and Replies -->
-        <section class="d-flex flex-column overflow-x-auto align-items-start w-100 px-3 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
+        <section class="d-flex flex-column align-items-start w-100 px-3 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
 
             {% if page == 1 %}
                 {% for thread in admin_threads %}
                     <!-- Thread -->
-                    <div class="d-flex gap-1" id="img-div-t{{ thread.id }}">
+                    <div class="d-flex overflow-x-scroll gap-1" style="max-width: 100vw;" id="img-div-t{{ thread.id }}">
                         {% if thread.image %}
                             <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
                                 <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
@@ -332,7 +333,7 @@
 
                         {% if thread.id == sorted_thread.id %}
                             <!-- Thread -->
-                            <div class="d-flex gap-1" id="img-div-t{{ thread.id }}">
+                            <div class="d-flex overflow-x-auto gap-1" style="max-width: 100vw;" id="img-div-t{{ thread.id }}">
                                 {% if thread.image %}
                                     <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
                                         <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
@@ -409,7 +410,7 @@
 
                         {% if thread.id == sorted_thread.id %}
                             <!-- Thread -->
-                            <div class="d-flex gap-1" id="img-div-t{{ thread.id }}">
+                            <div class="d-flex overflow-x-auto gap-1" style="max-width: 100vw;" id="img-div-t{{ thread.id }}">
                                 {% if thread.image %}
                                     <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
                                         <img class="rounded-1 shadow img-fluid" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
@@ -478,7 +479,7 @@
 
                         {% if thread.id == sorted_thread.id %}
                             <!-- Thread -->
-                            <div class="d-flex gap-1" id="img-div-t{{ thread.id }}">
+                            <div class="d-flex overflow-x-auto gap-1" style="max-width: 100vw;" id="img-div-t{{ thread.id }}">
                                 {% if thread.image %}
                                     <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content; min-width: 200px;">
                                         <img class="rounded-1 shadow img-fluid" src="{{ url_for('Images.Image', id=thread.image.id) }}" onclick="maxOrMin({{ thread.id }}, 't')">
